# lazarus-protocol

./: CLAUDE.md  README.md  pyproject.toml
experiments/: EXP-HMK-001-hospital-marketing-probe.md  EXP-T1-001-facet-review.md  EXP-UNI-001-unified-field.md
lazarus/: __init__.py  __main__.py
lazarus/audit/: __init__.py  boundary_auditor.py  checks.py  core.py  logbook_auditor.py  schema_auditor.py
lazarus/convergence/: __init__.py  categorical.py  display.py  numeric.py  types.py
lazarus/data/: __init__.py  io.py  sextuple.py
lazarus/experiment/: __init__.py  core.py  tracker.py
lazarus/hooks/: __init__.py  pre_commit.py
lazarus/logbook/: __init__.py  core.py  generator.py  index.py
lazarus/prompt/: __init__.py  template.py
lazarus/registry/: __init__.py  domain.py
logbook/: 2026-03-08-t1-hitl-review.md  2026-03-08-unified-field.md
templates/: CLAUDE.md.template  audit_adapter.py.template  convergence_runner.py.template  domain_config.py.template  enum_meta_schema.json.template  experiment.md.template  logbook_entry.md.template  pre-commit.template
tests/: test_audit_core.py  test_categorical.py  test_experiment.py  test_logbook.py  test_logbook_auditor.py  test_numeric.py  test_sextuple.py
