[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lazarus-protocol"
version = "0.2.0"
description = "Meta-research protocol library: probe-based exploration of unknown coordinate spaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hanul Kim (Theo)"}]
dependencies = []

[project.urls]
Repository = "https://github.com/user/lazarus-protocol"

[tool.setuptools.packages.find]
include = ["lazarus*"]
